# appetiser

./: .Jenkinsfile.swp  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  appetiser.py  aye.py  docker-compose.yml  pyproject.toml  requirements.txt  run_appetiser.sh  run_tests.sh
.github/workflows/: build-image.yml
_old_tests/jp2/: test_convert.py  test_mock_kdu.py
app/: appetiser.py  convert.py  image.py  json_utils.py  request_utils.py  response_utils.py  settings.py
app/jp2/: .convert.py.swp  .image.py.swp  __init__.py  convert.py  image.py  info.py  kdu.py  opj.py  settings.py  utils.py
app/jp2/jp2_convertor/: .__init__.py.swp  __init__.py  kdu.py  openjpeg.py
appetiser/: __init__.py  json_utils.py  main.py
appetiser/convert/: __init__.py  config.py  image.py  kdu.py  models.py  operations.py
appetiser/jp2/: settings.py
local_data/: .gitignore
scripts/: _get_kdu.sh  _get_opj.sh  run_appetiser.sh  run_tests.sh
tests/: .conftest.py.swp  .test_appetiser.py.swp  conftest.py  docker-compose.test.yml  test_appetiser.py  test_basic.py  test_convert_derivatives_only.py  test_convert_image_only.py  test_convert_image_transparency.py  test_convert_ingest.py  test_convert_ingest_optimisations.py  test_convert_thumbnails.py  test_endpoints.py  test_json_utils.py  test_request_utils.py  test_response_utils.py  utils.py
tests/_old_image_tests/: test__scale_dimensions_to_fit.py
tests/jp2/: .test_image.py.swp  .test_kdu.py.swp  test_convert.py  test_image.py  test_info.py  test_kdu.py  test_mock_kdu.py  test_utils.py
(+6 files in other folders)
